--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,6 @@ build/
 # Database JSON files
 backend/database/chats.json
 backend/database/users.json
+
+# GGUF Model
+backend/Llama-3.2-3B.Q4_K_M.gguf
