--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
     "expo-clipboard": "^7.0.0",
     "expo-constants": "~17.0.3",
     "expo-document-picker": "~13.0.1",
+    "expo-file-system": "^18.0.6",
     "expo-font": "~13.0.1",
     "expo-haptics": "~14.0.0",
+    "expo-image-picker": "^16.0.3",
     "expo-linear-gradient": "~14.0.1",
     "expo-linking": "~7.0.3",
     "expo-router": "4.0.11",
